Made minor changes to typos, spacing and formatting.

--- a/examples/cfd/test_02_convection_nonlinear.ipynb
+++ b/examples/cfd/test_02_convection_nonlinear.ipynb
@@ -57,9 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -93,9 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -145,7 +141,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -183,7 +179,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -227,9 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from devito import t, x, y\n",
@@ -247,15 +241,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And finally we can put it all together to buuild an operator and solve our coupled problem."
+    "And finally we can put it all together to build an operator and solve our coupled problem."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -314,41 +306,32 @@
     "init_hat(field=v.data[0], dx=dx, dy=dy, value=2.)\n",
     "\n",
     "op = Operator([update_u, update_v] + bc_u + bc_v,\n",
-    "              subs={h: dx, s: dt})\n",
+    "              subs={h:dx, s:dt})\n",
     "op(time=nt+1)\n",
     "\n",
     "plot_field(u.data[0, :, :])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
