--- a/examples/cfd/test_04_burgers.ipynb
+++ b/examples/cfd/test_04_burgers.ipynb
@@ -134,7 +134,7 @@
    "source": [
     "Nice, our wave looks just like the original. Now we shall attempt to write our entire Burgers' equation operator in a single cell - but before we can demonstrate this, there is one slight problem.\n",
     "\n",
-    "The diffusion term in our equation requires a second-order space discretisation on our velocity fields, which we set through the `TimeData` constructor for $u$ and $v$. The `TimeData` objects will store this dicretisation information and use it as default whenever we use the shorthnad notations for derivative, like `u.dxl` or `u.dyl`. For the advection term, however, we want to use a first-order discretisation, which we now have to create by hand when combining terms with different stencil discretisations. To illustrate let's consider the following example: "
+    "The diffusion term in our equation requires a second-order space discretisation on our velocity fields, which we set through the `TimeData` constructor for $u$ and $v$. The `TimeData` objects will store this dicretisation information and use it as default whenever we use the shorthand notations for derivative, like `u.dxl` or `u.dyl`. For the advection term, however, we want to use a first-order discretisation, which we now have to create by hand when combining terms with different stencil discretisations. To illustrate let's consider the following example: "
    ]
   },
   {
@@ -258,14 +258,14 @@
     "update_v = Eq(v.forward, stencil_v)\n",
     "\n",
     "# Create Dirichlet BC expressions using the low-level API\n",
-    "bc_u = [Eq(u.indexed[t+1, 0, y], 1.)]  # left\n",
+    "bc_u = [Eq(u.indexed[t+1, 0, y], 1.)]      # left\n",
     "bc_u += [Eq(u.indexed[t+1, nx-1, y], 1.)]  # right\n",
     "bc_u += [Eq(u.indexed[t+1, x, ny-1], 1.)]  # top\n",
-    "bc_u += [Eq(u.indexed[t+1, x, 0], 1.)]  # bottom\n",
-    "bc_v = [Eq(v.indexed[t+1, 0, y], 1.)]  # left\n",
+    "bc_u += [Eq(u.indexed[t+1, x, 0], 1.)]     # bottom\n",
+    "bc_v = [Eq(v.indexed[t+1, 0, y], 1.)]      # left\n",
     "bc_v += [Eq(v.indexed[t+1, nx-1, y], 1.)]  # right\n",
     "bc_v += [Eq(v.indexed[t+1, x, ny-1], 1.)]  # top\n",
-    "bc_v += [Eq(v.indexed[t+1, x, 0], 1.)]  # bottom\n",
+    "bc_v += [Eq(v.indexed[t+1, x, 0], 1.)]     # bottom\n",
     "\n",
     "# Create the operator\n",
     "op = Operator([update_u, update_v] + bc_u + bc_v,\n",
