Implemented first part of devito code (other than the operator)

--- a/examples/cfd/test_07_navier_stokes_cavity_flow.ipynb
+++ b/examples/cfd/test_07_navier_stokes_cavity_flow.ipynb
@@ -282,26 +282,76 @@
    "source": [
     "<b>Devito Implementation</b>\n",
     "\n",
-    "Now let's go through using Devito and see how we can go about implementing the same thing. To begin with, we'll need TimeData objects to represent this space"
+    "Now let's go through using Devito and see how we can go about implementing the same thing. To begin with, we'll need TimeData objects to represent this space, and an equation to go with it. The equation we'll be using is\n",
+    "\n",
+    "$$\\frac{\\partial\\vec{v}}{\\partial t} + (\\vec{v} \\cdot \\nabla)\\vec{v} = - \\frac{1}{\\rho}\\nabla p + \\nu \\nabla^2 \\vec{v}$$\n",
+    "\n",
+    "as in Lorena Barba's notes. This splits up into 3 equations for u, v, and p (pressure) respectively. Explicitly, we'll have to use the equations\n",
+    "\n",
+    "$$\\frac{\\partial u}{\\partial t} + u\\frac{\\partial u}{\\partial x} + v\\frac{\\partial u}{\\partial y} = -\\frac{1}{\\rho}\\frac{\\partial p}{\\partial x} + \\nu\\Big(\\frac{\\partial^2u}{\\partial x^2}+\\frac{\\partial^2u}{\\partial y^2}\\Big)$$\n",
+    "\n",
+    "$$\\frac{\\partial v}{\\partial t} + u\\frac{\\partial v}{\\partial x} + v\\frac{\\partial v}{\\partial y} = -\\frac{1}{\\rho}\\frac{\\partial p}{\\partial y} + \\nu\\Big(\\frac{\\partial^2v}{\\partial x^2}+\\frac{\\partial^2v}{\\partial y^2}\\Big)$$\n",
+    "\n",
+    "$$\\frac{\\partial^2p}{\\partial x^2}+\\frac{\\partial^2p}{\\partial y^2} = -\\rho\\Big(\\frac{\\partial u}{\\partial x}\\frac{\\partial u}{\\partial x} + 2\\frac{\\partial u}{\\partial y}\\frac{\\partial v}{\\partial x} + \\frac{\\partial v}{\\partial y}\\frac{\\partial v}{\\partial y}\\Big)$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'devito'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-783cc32af8a8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mdevito\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mOperator\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTimeData\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mleft\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msympy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mEq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msolve\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msympy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mabc\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mh\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# First create the space we need for this model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'devito'"
+     ]
+    }
+   ],
    "source": [
-    "from devito import TimeData\n",
+    "from devito import Operator, TimeData, left, x, y, t\n",
     "from sympy import Eq, solve\n",
+    "from sympy.abc import h, s\n",
     "\n",
+    "# First create the space we need for this model\n",
     "u = TimeData(name='u', shape=(nx, ny))\n",
     "v = TimeData(name='u', shape=(nx, ny))\n",
     "p = TimeData(name='p', shape=(nx, ny))\n",
     "b = TimeData(name='b', shape=(nx, ny))\n",
     "\n",
-    "# First create the space we need for this model\n"
+    "# Set up the equation as above\n",
+    "# For u and v's momentum equations\n",
+    "u_eq = Eq(u.dt + u*u.dx + v*u.dy, -1/rho*p.dx + nu*u.laplace)\n",
+    "v_eq = Eq(v.dt + u*v.dx + v*v.dy, -1/rho*p.dy + nu*v.laplace)\n",
+    "# For p's pressure equation\n",
+    "p_eq = Eq(p.laplace, -rho*((u.dx)**2 + 2*(u.dy)*(v.dx) + (v.dy)**2))\n",
+    "                 \n",
+    "# Set up our stencils\n",
+    "stencil_u = solve(u_eq, u.forward)\n",
+    "stencil_v = solve(v_eq, v.forward)\n",
+    "stencil_p = solve(p_eq, p.forward)\n",
+    "update_u = Eq(u.forward, stencil_u)\n",
+    "update_v = Eq(v.forward, stencil_v)\n",
+    "update_p = Eq(p.forward, stencil_p)\n",
+    "\n",
+    "# Set Dirichlet boundary conditions using the low-level API, all equal to 1\n",
+    "bc_u = [Eq(u.indexed[t+1, 0, y], 1.)]  # left\n",
+    "bc_u += [Eq(u.indexed[t+1, nx-1, y], 1.)]  # right\n",
+    "bc_u += [Eq(u.indexed[t+1, x, ny-1], 1.)]  # top\n",
+    "bc_u += [Eq(u.indexed[t+1, x, 0], 1.)]  # bottom\n",
+    "bc_v = [Eq(v.indexed[t+1, 0, y], 1.)]  # left\n",
+    "bc_v += [Eq(v.indexed[t+1, nx-1, y], 1.)]  # right\n",
+    "bc_v += [Eq(v.indexed[t+1, x, ny-1], 1.)]  # top\n",
+    "bc_v += [Eq(v.indexed[t+1, x, 0], 1.)]  # bottom\n",
+    "\n",
+    "# Create the Operator\n",
+    "\n",
+    "# Execute for a number of timesteps\n",
+    "op(time=nt+1)"
    ]
   }
  ],
