Finished the first draft of the tutorial with everything up and running as expected.

--- a/examples/cfd/test_07_navier_stokes_cavity_flow.ipynb
+++ b/examples/cfd/test_07_navier_stokes_cavity_flow.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "<b>Part 1: Implementing cavity flow</b>\n",
     "\n",
-    "It will take a while to set up all the equations before we can output any diagrams. Before we start with our usual variable declarations, we need to make some notes, because our code will need to be a tiny bit different at certain parts.\n",
+    "It will take a while to set up all the equations before we can output any diagrams. Before we start with our usual variable declarations, we need to make some notes, because our code will need to be a tiny bit different at certain parts compared to what <i>12 steps to Navier-Stokes</i> uses. Notably:\n",
     "\n",
     "(1) The tutorial uses the order (ny, nx) in the code. We want to stick with (x, y) as a standard notation throughout these tutorials. Because of that, we'll need to use an \"inverted\" print function when we implement the code in Devito so that we flip the axes and print the graph just like the one printed in the python example.\n",
     "\n",
@@ -30,7 +30,7 @@
     "\n",
     "$$\\rho\\Big[\\frac{1}{\\Delta t}\\Big(\\frac{u_{i+1,j} - u_{i-1,j}}{2 \\Delta x}+\\frac{v_{i,j+1} - v_{i,j-1}}{2 \\Delta y}\\Big)$$\n",
     "\n",
-    "has been instroduced without much explanation, and is not included in the original equation.\n",
+    "has been instroduced without much explanation, and is not included in the original equation. We will need to include this becaues it's important to what we're trying to do and it does change the solution to the equation.\n",
     "\n",
     "This will be important when we do our Devito implementation, because all we want to do is use the original equations to solve the problem. As a result, we'll actually need to use a slightly different equation to get to what we want.\n",
     "\n",
@@ -425,7 +425,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Printing all this is a bit different to last time and doesn't have an easy implementation integrated into Devito yet, so for now we'll have to define the printing function the same as plot_contour() above. Once we've done this we can take a look at our solution."
+    "Printing all this is a bit different to last time and doesn't have an easy implementation integrated into Devito yet, so for now we'll have to define the printing function the same as plot_contour() above. Once we've done this we can take a look at our solution. If we've done everything correctly, we should get a graph just like above (there isn't much room for error other than typos once you come to understand how to use Devito!)"
    ]
   },
   {
@@ -473,7 +473,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Perfect! That was exactly what we wanted. This means that we've successfully implemented cavity flow in Devito and been able to output it into a graph, which is what we wanted to do. In the next example we'll be continuing with Navier-Stokes equations, although with a slightly different example: channel flow. Click <a href=\"https://github.com/opesci/devito/blob/cfd-examples/examples/cfd/test_07_navier_stokes_channel_flow.ipynb\">here</a> to go to the next tutorial."
+    "Perfect! That was exactly what we wanted. This means that we've successfully implemented cavity flow in Devito and been able to output it into a graph, which is what we wanted to do. In the next example we'll take things a bit further while continuing with Navier-Stokes equations. Next time we'll do a slightly different example: channel flow. Click <a href=\"https://github.com/opesci/devito/blob/cfd-examples/examples/cfd/test_07_navier_stokes_channel_flow.ipynb\">here</a> to go to the next tutorial."
    ]
   }
  ],
