Pushing initial state of topology_optimization.ipynb

--- a/examples/topology_optimization/topology_optimization.ipynb
+++ b/examples/topology_optimization/topology_optimization.ipynb
@@ -12,9 +12,9 @@
     "\n",
     "$$ T = 0 $$\n",
     "\n",
-    "and the bottom and right sides have the condition \n",
+    "and the bottom and right sides have the condition:\n",
     "\n",
-    "$$ (k\\Del T) \\dot \\textbf{n}=0 $$\n",
+    "$$ (k \\nabla T) \\dot \\textbf{n}=0 $$\n",
     "\n",
     "We'll take the same conditions, and see if using the same equations, we can produce the same results by just working with Devito."
    ]
@@ -46,17 +46,15 @@
     "y = numpy.linspace(0, 2, ny)\n",
     "X, Y = numpy.meshgrid(x, y)\n",
     "\n",
-    "# Initialize the TimeData object 'u'. TODO: Do we need this?\n",
-    "u = TimeData(name='u', shape=(nx,ny)) \n",
-    "u.data.fill(0.)\n",
+    "# Initialize the TimeData object 't' (temperature). TODO: Do we need this?\n",
+    "t = TimeData(name='t', shape=(nx,ny), space_order=1) \n",
+    "t.data.fill(0.)\n",
     "\n",
     "# Define equations we'll use throughout our code\n",
-    "del_op = Del() # TODO: Check this usage of Del. Could be .gradient?\n",
-    "heat_flux = Eq(k * del_op(T)) # We'll use this as an abbreviation later\n",
+    "heat_flux = Eq(heat_conduction * t.dx) # We'll use this as an abbreviation later\n",
     "\n",
     "# TODO: Define other variables for the problem\n",
-    "temp = 0.\n",
-    "heat_conduction = 0.\n",
+    "heat_conduction = 0. \n",
     "vol_heat_source = 0.\n",
     "\n",
     "# This is the Lagrange multiplier, lambda\n",
@@ -69,12 +67,15 @@
    "source": [
     "Now we have a 2d space that we can work with.\n",
     "\n",
-    "Again, we now take equations from the paper we're looking at, giving us the following:\n",
+    "Before we work with this by finite differences (FD), we need to convert the equations into FD equations that we can put into our code.\n",
+    "\n",
+    "In the original paper we have:\n",
     "\n",
     "$$ \\int_{\\Omega_e} (\\nabla \\cdot (k \\nabla T) + f) = 0 $$\n",
     "$$ \\implies \\int_{\\partial \\Omega_e} (k \\nabla T) \\cdot \\mathbf{n} + \\int_{\\Omega_e} f = 0 \\ \\forall_e $$\n",
     "\n",
-    "$$"
+    "We're going to have to convert this into FD. Doing so, we're going to end up with the equations:\n",
+    "\n"
    ]
   },
   {
@@ -91,10 +92,9 @@
     "bc_u = [Eq(x.indexed[t+1, 0, y], 0.)]      # left\n",
     "bc_u += [Eq(x.indexed[t+1, x, ny-1], 0.)]  # top\n",
     "\n",
+    "# Neumann boundary conditions\n",
     "bc_u += [Eq(x.indexed[t+1, nx-1, y], 0.)]  # right\n",
     "bc_u += [Eq(x.indexed[t+1, x, 0], 0.)]     # bottom\n",
-    "\n",
-    "# Neumann boundary conditions\n",
     "\n",
     "# Cost_function eqautions (these are equivalent)\n",
     "cost_function1 = Eq(integrate(vol_heat_source * temp))\n",
