--- a/examples/topology_optimization/topology_optimization.ipynb
+++ b/examples/topology_optimization/topology_optimization.ipynb
@@ -23,31 +23,50 @@
     "\n",
     "We'll take the same conditions, and see if using the same equations, we can produce the same results by just working with Devito.\n",
     "\n",
-    "We start by doing imports, initializing our 2d space, and setting up our forward time object."
+    "We start by doing imports, initializing our 2d space, and setting up our forward time object.\n",
+    "\n",
+    "The equation we use for heat diffusion is described by:\n",
+    "\n",
+    "$$ \\frac{\\partial u}{\\partial t} - \\alpha \\nabla^2 u = 0 $$\n",
+    "\n",
+    "where u is some equation in terms of x, y, z; \n",
+    "\n",
+    "t is time;\n",
+    "\n",
+    "$$\\alpha$$ is thermal diffusivity"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 30,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'devito'",
+     "ename": "SympifyError",
+     "evalue": "SympifyError: [temp(t, x, y)]",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-6df31b48a7c0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mdevito\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mOperator\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTimeData\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mleft\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mdevito\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfinite_difference\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mfirst_derivative\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mleft\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mright\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'devito'"
+      "\u001b[0;31mSympifyError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-30-58275522f778>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0;31m# Initialize the stencil for temp, and its fwd time object\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0mstencil_temp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msolve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtemp_eq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtemp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m \u001b[0mupdate_temp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mEq\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtemp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstencil_temp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[0;31m# Define equations we'll use throughout our code\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.6/site-packages/sympy/core/relational.py\u001b[0m in \u001b[0;36m__new__\u001b[0;34m(cls, lhs, rhs, **options)\u001b[0m\n\u001b[1;32m    286\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__new__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcls\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlhs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrhs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0moptions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    287\u001b[0m         \u001b[0mlhs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_sympify\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlhs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 288\u001b[0;31m         \u001b[0mrhs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_sympify\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrhs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    289\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    290\u001b[0m         \u001b[0mevaluate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moptions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'evaluate'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mglobal_evaluate\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.6/site-packages/sympy/core/sympify.py\u001b[0m in \u001b[0;36m_sympify\u001b[0;34m(a)\u001b[0m\n\u001b[1;32m    353\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    354\u001b[0m     \"\"\"\n\u001b[0;32m--> 355\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0msympify\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstrict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    356\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    357\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.6/site-packages/sympy/core/sympify.py\u001b[0m in \u001b[0;36msympify\u001b[0;34m(a, locals, convert_xor, strict, rational, evaluate)\u001b[0m\n\u001b[1;32m    275\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    276\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mstrict\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 277\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mSympifyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    278\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    279\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0miterable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mSympifyError\u001b[0m: SympifyError: [temp(t, x, y)]"
      ]
     }
    ],
    "source": [
-    "from devito import Operator, TimeData, left, x, y\n",
+    "from devito import Operator, TimeData, x, y, t\n",
+    "from sympy import Eq, solve\n",
     "import numpy as np\n",
     "\n",
     "from devito.finite_difference import first_derivative, left, right\n",
+    "\n",
+    "def mydl(u, dim):\n",
+    "    return first_derivative(u, dim=dim, order=1, side=left)\n",
     "\n",
     "# VARIABLE DECLARATIONS\n",
     "\n",
@@ -57,20 +76,25 @@
     "nt = 500\n",
     "dx = 2. / (nx - 1) \n",
     "dy = 2. / (ny - 1)\n",
-    "x = numpy.linspace(0, 2, nx)\n",
-    "y = numpy.linspace(0, 2, ny)\n",
-    "X, Y = numpy.meshgrid(x, y)\n",
+    "x = np.linspace(0, 2, nx)\n",
+    "y = np.linspace(0, 2, ny)\n",
+    "X, Y = np.meshgrid(x, y)\n",
     "\n",
     "# TODO: Define other variables for the problem\n",
-    "heat_conduction = 0.\n",
+    "diffusivity = 0.\n",
     "vol_heat_source = 0.\n",
     "\n",
-    "# Define equations we'll use throughout our code\n",
-    "heat_flux = Eq(heat_conduction * t.dx) # We'll use this as an abbreviation later\n",
+    "# Initialize the TimeData object 'temp'\n",
+    "temp = TimeData(name='temp', shape=(nx,ny), space_order=2) \n",
+    "temp.data.fill(0.)\n",
+    "# Initialize the equation for temp\n",
+    "temp_eq = Eq(temp.dt - diffusivity * temp.laplace, 0)\n",
+    "# Initialize the stencil for temp, and its fwd time object\n",
+    "stencil_temp = solve(temp_eq, temp.forward)\n",
+    "update_temp = Eq(temp.forward, stencil_temp)\n",
     "\n",
-    "# Initialize the TimeData object 't' (representing temperature). TODO: Do we need this?\n",
-    "temp = TimeData(name='temp', shape=(nx,ny), space_order=1) \n",
-    "temp.data.fill(0.)"
+    "# Define equations we'll use throughout our code\n",
+    "heat_flux = Eq(diffusivity * temp.dx) # We'll use this as an abbreviation later"
    ]
   },
   {
@@ -98,47 +122,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
    "outputs": [],
    "source": [
     "# SET UP THE PROBLEM\n",
     "\n",
     "# Dirichlet boundary conditions\n",
-    "bc_u = [Eq(x.indexed[temp+1, 0, y], 0.)]      # left\n",
-    "bc_u += [Eq(x.indexed[temp+1, x, ny-1], 0.)]  # top\n",
+    "bc_temp = [Eq(temp.indexed[t+1, 0, y], 0.)]      # left\n",
+    "bc_temp += [Eq(temp.indexed[t+1, x, ny-1], 0.)]  # top\n",
     "\n",
     "# Neumann boundary conditions\n",
-    "bc += [Eq(x.indexed[nx-1, y], x.indexed[nx-2, y])] # right\n",
-    "bc += [Eq(x.indexed[x, 0], x.indexed[x, 1])]       # bottom\n",
-    "\n",
-    "# unitvec\n",
-    "# equations\n",
-    "\n",
-    "# (Setup equations)\n",
-    "# Find min topology using relevant function"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next to set up our Devito equations in order to solve the problem:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# SET UP THE DEVITO EQUATIONS\n",
-    "\n",
-    "temp_eq = Eq(0) # TODO\n",
-    "stencil_temp = solve(temp_eq, temp.forward)[0]\n",
-    "update_temp = Eq(temp.forward, stencil_temp)"
+    "bc_temp += [Eq(temp.indexed[nx-1, y], temp.indexed[nx-2, y])] # right\n",
+    "bc_temp += [Eq(temp.indexed[x, 0], temp.indexed[x, 1])]       # bottom"
    ]
   },
   {
@@ -158,7 +154,7 @@
    "source": [
     "# Create the Operator\n",
     "op = Operator([[update_temp] + bc_temp, subs={h:dx, s:dt},\n",
-    "             dse=None, dle=None)\n",
+    "             dse=None, dle=None])\n",
     "\n",
     "# Execute for a number of timesteps using nt from earlier\n",
     "op(time=nt+1, u=u, v=v, p=p)"
