Fixed bugs in topology optimization. TODO: printing.

--- a/examples/topology_optimization/topology_optimization.ipynb
+++ b/examples/topology_optimization/topology_optimization.ipynb
@@ -38,30 +38,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "SympifyError",
-     "evalue": "SympifyError: [temp(t, x, y)]",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mSympifyError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-30-58275522f778>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0;31m# Initialize the stencil for temp, and its fwd time object\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0mstencil_temp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msolve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtemp_eq\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtemp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m \u001b[0mupdate_temp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mEq\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtemp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstencil_temp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[0;31m# Define equations we'll use throughout our code\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.6/site-packages/sympy/core/relational.py\u001b[0m in \u001b[0;36m__new__\u001b[0;34m(cls, lhs, rhs, **options)\u001b[0m\n\u001b[1;32m    286\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__new__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcls\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlhs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrhs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0moptions\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    287\u001b[0m         \u001b[0mlhs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_sympify\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlhs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 288\u001b[0;31m         \u001b[0mrhs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_sympify\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrhs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    289\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    290\u001b[0m         \u001b[0mevaluate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moptions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'evaluate'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mglobal_evaluate\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.6/site-packages/sympy/core/sympify.py\u001b[0m in \u001b[0;36m_sympify\u001b[0;34m(a)\u001b[0m\n\u001b[1;32m    353\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    354\u001b[0m     \"\"\"\n\u001b[0;32m--> 355\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0msympify\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstrict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    356\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    357\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/local/lib/python3.6/site-packages/sympy/core/sympify.py\u001b[0m in \u001b[0;36msympify\u001b[0;34m(a, locals, convert_xor, strict, rational, evaluate)\u001b[0m\n\u001b[1;32m    275\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    276\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mstrict\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 277\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mSympifyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    278\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    279\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0miterable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mSympifyError\u001b[0m: SympifyError: [temp(t, x, y)]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from devito import Operator, TimeData, x, y, t\n",
     "from sympy import Eq, solve\n",
     "import numpy as np\n",
+    "from sympy.abc import h, s\n",
     "\n",
     "from devito.finite_difference import first_derivative, left, right\n",
     "\n",
@@ -76,9 +62,9 @@
     "nt = 500\n",
     "dx = 2. / (nx - 1) \n",
     "dy = 2. / (ny - 1)\n",
-    "x = np.linspace(0, 2, nx)\n",
-    "y = np.linspace(0, 2, ny)\n",
-    "X, Y = np.meshgrid(x, y)\n",
+    "x_axis = np.linspace(0, 2, nx)\n",
+    "y_axis = np.linspace(0, 2, ny)\n",
+    "xv, yv = np.meshgrid(x_axis, y_axis)\n",
     "\n",
     "# TODO: Define other variables for the problem\n",
     "diffusivity = 0.\n",
@@ -90,7 +76,7 @@
     "# Initialize the equation for temp\n",
     "temp_eq = Eq(temp.dt - diffusivity * temp.laplace, 0)\n",
     "# Initialize the stencil for temp, and its fwd time object\n",
-    "stencil_temp = solve(temp_eq, temp.forward)\n",
+    "stencil_temp = solve(temp_eq, temp.forward)[0]\n",
     "update_temp = Eq(temp.forward, stencil_temp)\n",
     "\n",
     "# Define equations we'll use throughout our code\n",
@@ -120,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "scrolled": true
    },
@@ -133,8 +119,8 @@
     "bc_temp += [Eq(temp.indexed[t+1, x, ny-1], 0.)]  # top\n",
     "\n",
     "# Neumann boundary conditions\n",
-    "bc_temp += [Eq(temp.indexed[nx-1, y], temp.indexed[nx-2, y])] # right\n",
-    "bc_temp += [Eq(temp.indexed[x, 0], temp.indexed[x, 1])]       # bottom"
+    "bc_temp += [Eq(temp.indexed[t+1, nx-1, y], temp.indexed[t+1, nx-2, y])] # right\n",
+    "bc_temp += [Eq(temp.indexed[t+1, x, 0], temp.indexed[t+1, x, 1])]       # bottom"
    ]
   },
   {
@@ -146,18 +132,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CustomCompiler: compiled /var/folders/b0/z7vc8ltj0131yqczz72tf_wm0000gp/T/devito-502/f3de1180ab5d1eab76a88c94bd71658785a6b21e.c [0.16 s]\n",
+      "=========================================================================================\n",
+      "Section loop_y_1<501,41> with OI=0.00 computed in 0.000 s [Perf: 0.00 GFlops/s]\n",
+      "Section loop_x_2<501,41> with OI=0.00 computed in 0.000 s [Perf: 0.00 GFlops/s]\n",
+      "Section main<501,41,41> with OI=0.00 computed in 0.000 s [Perf: 0.00 GFlops/s]\n",
+      "=========================================================================================\n"
+     ]
+    }
+   ],
    "source": [
     "# Create the Operator\n",
-    "op = Operator([[update_temp] + bc_temp, subs={h:dx, s:dt},\n",
-    "             dse=None, dle=None])\n",
+    "op = Operator([update_temp] + bc_temp, subs={h:dx, s:dt},\n",
+    "             dse=None, dle=None)\n",
     "\n",
     "# Execute for a number of timesteps using nt from earlier\n",
-    "op(time=nt+1, u=u, v=v, p=p)"
+    "op(time=nt+1, temp=temp)"
    ]
   },
   {
@@ -169,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -179,7 +176,7 @@
     "\n",
     "from matplotlib import pyplot\n",
     "\n",
-    "def plot_contour(X, Y, p, u, v):\n",
+    "def plot_contour(X, Y, temp):\n",
     "    fig = pyplot.figure(figsize=(11,7), dpi=100)\n",
     "    # plotting the pressure field as a contour\n",
     "    pyplot.contourf(Y, X, p, alpha=0.5, cmap=cm.viridis)  \n",
@@ -199,11 +196,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'p' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-39-4022115dd06e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mplot_contour\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mY\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-38-05740f0541fd>\u001b[0m in \u001b[0;36mplot_contour\u001b[0;34m(X, Y, temp)\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mfig\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpyplot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfigsize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m11\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdpi\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;31m# plotting the pressure field as a contour\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0mpyplot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontourf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mY\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malpha\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcmap\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mviridis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m     \u001b[0mpyplot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolorbar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0;31m# plotting the pressure field outlines\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'p' is not defined"
+     ]
+    }
+   ],
    "source": [
     "plot_contour(X, Y, t)"
    ]
