--- a/examples/reaction-diffusion/reaction_diffusion.ipynb
+++ b/examples/reaction-diffusion/reaction_diffusion.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -91,11 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "from devito import TimeData\n",
+    "from devito import TimeData, x, y, t\n",
+    "from sympy import Eq, solve\n",
     "\n",
     "uvinitial = numpy.load('./data/uvinitial.npz')\n",
     "V = TimeData(name='V', shape=uvinitial['V'].shape, space_order=2)\n",
@@ -117,40 +120,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'U' object has no attribute 'lapalce'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m--------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-67-83c39384f105>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Initialize the equations\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mu_partial\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDu\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mU\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlapalce\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mU\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mV\u001b[0m \u001b[0;34m**\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mF\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mU\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mv_partial\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDv\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mV\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlaplace\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mU\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mV\u001b[0m \u001b[0;34m**\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mF\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mV\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# Initialize Neumann boundary conditions\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'U' object has no attribute 'lapalce'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize the equations\n",
-    "u_partial = Du * U.lapalce - U * V ** 2 + F * (1 - U)\n",
+    "u_partial = Du * U.laplace - U * V ** 2 + F * (1 - U)\n",
     "v_partial = Dv * V.laplace + U * V ** 2 - (F + k) * V\n",
     "\n",
-    "# Initialize Neumann boundary conditions\n",
-    "bc_temp += [Eq(temp.indexed[t+1, nx-1, y], temp.indexed[t+1, nx-2, y])] # right\n",
-    "bc_temp += [Eq(temp.indexed[t+1, x, ny-1], temp.indexed[t+1, nx-2, y])] # top\n",
-    "bc_temp += [Eq(temp.indexed[t+1, 0, y], temp.indexed[t+1, x, 1])]       # left\n",
-    "bc_temp += [Eq(temp.indexed[t+1, x, 0], temp.indexed[t+1, x, 1])]    # bottom"
+    "# Initialize Neumann boundary conditions for U and V\n",
+    "bc_U = [Eq(U.indexed[t+1, n-1, y], U.indexed[t+1, n-2, y])]  # right\n",
+    "bc_U += [Eq(U.indexed[t+1, x, n-1], U.indexed[t+1, x, n-2])] # top\n",
+    "bc_U += [Eq(U.indexed[t+1, 0, y], U.indexed[t+1, 1, y])]       # left\n",
+    "bc_U += [Eq(U.indexed[t+1, x, 0], U.indexed[t+1, x, 1])]       # bottom\n",
+    "\n",
+    "bc_V = [Eq(V.indexed[t+1, n-1, y], V.indexed[t+1, n-2, y])]  # right\n",
+    "bc_V += [Eq(V.indexed[t+1, x, n-1], V.indexed[t+1, x, n-2])] # top\n",
+    "bc_V += [Eq(V.indexed[t+1, 0, y], V.indexed[t+1, 1, y])]       # left\n",
+    "bc_V += [Eq(V.indexed[t+1, x, 0], V.indexed[t+1, x, 1])]       # bottom"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Image data can not convert to float",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-5030a2e55584>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mfig\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpyplot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfigsize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mpyplot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m121\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mpyplot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mU\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcmap\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mRdBu\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mpyplot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mxticks\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpyplot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0myticks\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mpyplot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m122\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.6/site-packages/matplotlib/pyplot.py\u001b[0m in \u001b[0;36mimshow\u001b[0;34m(X, cmap, norm, aspect, interpolation, alpha, vmin, vmax, origin, extent, shape, filternorm, filterrad, imlim, resample, url, hold, data, **kwargs)\u001b[0m\n\u001b[1;32m   3155\u001b[0m                         \u001b[0mfilternorm\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfilternorm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilterrad\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfilterrad\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3156\u001b[0m                         \u001b[0mimlim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mimlim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresample\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mresample\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0murl\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0murl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3157\u001b[0;31m                         **kwargs)\n\u001b[0m\u001b[1;32m   3158\u001b[0m     \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3159\u001b[0m         \u001b[0max\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_hold\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwashold\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.6/site-packages/matplotlib/__init__.py\u001b[0m in \u001b[0;36minner\u001b[0;34m(ax, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1896\u001b[0m                     warnings.warn(msg % (label_namer, func.__name__),\n\u001b[1;32m   1897\u001b[0m                                   RuntimeWarning, stacklevel=2)\n\u001b[0;32m-> 1898\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0max\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1899\u001b[0m         \u001b[0mpre_doc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minner\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__doc__\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1900\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mpre_doc\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.6/site-packages/matplotlib/axes/_axes.py\u001b[0m in \u001b[0;36mimshow\u001b[0;34m(self, X, cmap, norm, aspect, interpolation, alpha, vmin, vmax, origin, extent, shape, filternorm, filterrad, imlim, resample, url, **kwargs)\u001b[0m\n\u001b[1;32m   5122\u001b[0m                               resample=resample, **kwargs)\n\u001b[1;32m   5123\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5124\u001b[0;31m         \u001b[0mim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5125\u001b[0m         \u001b[0mim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_alpha\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0malpha\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5126\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_clip_path\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.6/site-packages/matplotlib/image.py\u001b[0m in \u001b[0;36mset_data\u001b[0;34m(self, A)\u001b[0m\n\u001b[1;32m    594\u001b[0m         if (self._A.dtype != np.uint8 and\n\u001b[1;32m    595\u001b[0m                 not np.can_cast(self._A.dtype, np.float)):\n\u001b[0;32m--> 596\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Image data can not convert to float\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    597\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    598\u001b[0m         if (self._A.ndim not in (2, 3) or\n",
+      "\u001b[0;31mTypeError\u001b[0m: Image data can not convert to float"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAPgAAADuCAYAAAAUXsqNAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADDBJREFUeJzt3V+IXPd5h/Hna6lqqOs4JdpAkORYoXKdrVOwuxiXQOMS\nt8gqSBdpgwSmdREWSaNQSCi4uLhBuUpDUwioTQU1TgKxo+SiLERGkNTGYCJHa+w4lozDRnGrVUKt\nOI5vjP+Ivr2YcTNe73rOzs7Orn88HxDMOfPbmZeRnj1nzx7jVBWS2nTZeg8gae0YuNQwA5caZuBS\nwwxcapiBSw0bGniSe5I8l+SpZZ5Pki8lmU/yZJIbxj+mpFF0OYLfC+x+i+dvBXb1/xwC/nX1Y0ka\nh6GBV9XDwC/eYsk+4KvVcwp4V5L3jmtASaMbx8/g24DzA9sL/X2S1tnmSb5ZkkP0TuO5/PLLf//a\na6+d5NtLb0uPPfbYz6tqapSvHUfgF4AdA9vb+/vepKqOAccAZmZmam5ubgxvL7UtyX+N+rXjOEWf\nBf6ifzX9JuDFqvrZGF5X0ioNPYInuQ+4GdiaZAH4B+DXAKrqy8AJYA8wD7wE/NVaDStpZYYGXlUH\nhjxfwCfHNpGksfFONqlhBi41zMClhhm41DADlxpm4FLDDFxqmIFLDTNwqWEGLjXMwKWGGbjUMAOX\nGmbgUsMMXGqYgUsNM3CpYQYuNczApYYZuNQwA5caZuBSwwxcapiBSw0zcKlhBi41zMClhhm41DAD\nlxpm4FLDDFxqmIFLDesUeJLdSZ5JMp/kziWevyrJg0keT/Jkkj3jH1XSSg0NPMkm4ChwKzANHEgy\nvWjZ3wPHq+p6YD/wL+MeVNLKdTmC3wjMV9W5qnoVuB/Yt2hNAe/sP74S+On4RpQ0qi6BbwPOD2wv\n9PcN+ixwW5IF4ATwqaVeKMmhJHNJ5i5evDjCuJJWYlwX2Q4A91bVdmAP8LUkb3rtqjpWVTNVNTM1\nNTWmt5a0nC6BXwB2DGxv7+8bdBA4DlBV3wPeAWwdx4CSRtcl8NPAriQ7k2yhdxFtdtGa/wY+ApDk\nA/QC9xxcWmdDA6+qS8Bh4CTwNL2r5WeSHEmyt7/sM8AdSX4A3AfcXlW1VkNL6mZzl0VVdYLexbPB\nfXcPPD4LfGi8o0laLe9kkxpm4FLDDFxqmIFLDTNwqWEGLjXMwKWGGbjUMAOXGmbgUsMMXGqYgUsN\nM3CpYQYuNczApYYZuNQwA5caZuBSwwxcapiBSw0zcKlhBi41zMClhhm41DADlxpm4FLDDFxqmIFL\nDTNwqWEGLjXMwKWGdQo8ye4kzySZT3LnMms+luRskjNJvj7eMSWNYvOwBUk2AUeBPwYWgNNJZqvq\n7MCaXcDfAR+qqheSvGetBpbUXZcj+I3AfFWdq6pXgfuBfYvW3AEcraoXAKrqufGOKWkUXQLfBpwf\n2F7o7xt0DXBNkkeSnEqye1wDShrd0FP0FbzOLuBmYDvwcJIPVtUvBxclOQQcArjqqqvG9NaSltPl\nCH4B2DGwvb2/b9ACMFtVr1XVT4Af0Qv+DarqWFXNVNXM1NTUqDNL6qhL4KeBXUl2JtkC7AdmF635\nD3pHb5JspXfKfm6Mc0oawdDAq+oScBg4CTwNHK+qM0mOJNnbX3YSeD7JWeBB4G+r6vm1GlpSN6mq\ndXnjmZmZmpubW5f3lt5OkjxWVTOjfK13skkNM3CpYQYuNczApYYZuNQwA5caZuBSwwxcapiBSw0z\ncKlhBi41zMClhhm41DADlxpm4FLDDFxqmIFLDTNwqWEGLjXMwKWGGbjUMAOXGmbgUsMMXGqYgUsN\nM3CpYQYuNczApYYZuNQwA5caZuBSwwxcalinwJPsTvJMkvkkd77Fuo8mqSQj/c/KJY3X0MCTbAKO\nArcC08CBJNNLrLsC+Bvg0XEPKWk0XY7gNwLzVXWuql4F7gf2LbHuc8DngZfHOJ+kVegS+Dbg/MD2\nQn/f/0tyA7Cjqr49xtkkrdKqL7IluQz4IvCZDmsPJZlLMnfx4sXVvrWkIboEfgHYMbC9vb/vdVcA\n1wEPJXkWuAmYXepCW1Udq6qZqpqZmpoafWpJnXQJ/DSwK8nOJFuA/cDs609W1YtVtbWqrq6qq4FT\nwN6qmluTiSV1NjTwqroEHAZOAk8Dx6vqTJIjSfau9YCSRre5y6KqOgGcWLTv7mXW3rz6sSSNg3ey\nSQ0zcKlhBi41zMClhhm41DADlxpm4FLDDFxqmIFLDTNwqWEGLjXMwKWGGbjUMAOXGmbgUsMMXGqY\ngUsNM3CpYQYuNczApYYZuNQwA5caZuBSwwxcapiBSw0zcKlhBi41zMClhhm41DADlxpm4FLDDFxq\nWKfAk+xO8kyS+SR3LvH8p5OcTfJkku8med/4R5W0UkMDT7IJOArcCkwDB5JML1r2ODBTVb8HfAv4\nx3EPKmnluhzBbwTmq+pcVb0K3A/sG1xQVQ9W1Uv9zVPA9vGOKWkUXQLfBpwf2F7o71vOQeCBpZ5I\ncijJXJK5ixcvdp9S0kjGepEtyW3ADPCFpZ6vqmNVNVNVM1NTU+N8a0lL2NxhzQVgx8D29v6+N0hy\nC3AX8OGqemU840lajS5H8NPAriQ7k2wB9gOzgwuSXA/8G7C3qp4b/5iSRjE08Kq6BBwGTgJPA8er\n6kySI0n29pd9AfhN4JtJnkgyu8zLSZqgLqfoVNUJ4MSifXcPPL5lzHNJGgPvZJMaZuBSwwxcapiB\nSw0zcKlhBi41zMClhhm41DADlxpm4FLDDFxqmIFLDTNwqWEGLjXMwKWGGbjUMAOXGmbgUsMMXGqY\ngUsNM3CpYQYuNczApYYZuNQwA5caZuBSwwxcapiBSw0zcKlhBi41zMClhnUKPMnuJM8kmU9y5xLP\n/3qSb/SffzTJ1eMeVNLKDQ08ySbgKHArMA0cSDK9aNlB4IWq+m3gn4HPj3tQSSvX5Qh+IzBfVeeq\n6lXgfmDfojX7gK/0H38L+EiSjG9MSaPoEvg24PzA9kJ/35JrquoS8CLw7nEMKGl0myf5ZkkOAYf6\nm68keWqS7z+CrcDP13uIt7DR54ONP+NGnw/gd0b9wi6BXwB2DGxv7+9bas1Cks3AlcDzi1+oqo4B\nxwCSzFXVzChDT8pGn3Gjzwcbf8aNPh/0Zhz1a7ucop8GdiXZmWQLsB+YXbRmFvjL/uM/A/6zqmrU\noSSNx9AjeFVdSnIYOAlsAu6pqjNJjgBzVTUL/DvwtSTzwC/ofROQtM46/QxeVSeAE4v23T3w+GXg\nz1f43sdWuH49bPQZN/p8sPFn3OjzwSpmjGfSUru8VVVq2JoHvtFvc+0w36eTnE3yZJLvJnnfJOfr\nMuPAuo8mqSQTvyrcZcYkH+t/lmeSfH0jzZfkqiQPJnm8/3e9Z8Lz3ZPkueV+dZyeL/XnfzLJDZ1e\nuKrW7A+9i3I/Bt4PbAF+AEwvWvPXwJf7j/cD31jLmUaY74+A3+g//sQk5+s6Y3/dFcDDwClgZqPN\nCOwCHgd+q7/9ng023zHgE/3H08CzE/4M/xC4AXhqmef3AA8AAW4CHu3yumt9BN/ot7kOna+qHqyq\nl/qbp+jdBzBJXT5DgM/R+28AXp7kcH1dZrwDOFpVLwBU1XMbbL4C3tl/fCXw0wnOR1U9TO83UMvZ\nB3y1ek4B70ry3mGvu9aBb/TbXLvMN+ggve+ikzR0xv7p2o6q+vYkBxvQ5XO8BrgmySNJTiXZPbHp\nus33WeC2JAv0fmP0qcmM1tlK/60CE75V9e0syW3ADPDh9Z5lUJLLgC8Ct6/zKMNspneafjO9s6CH\nk3ywqn65rlP9ygHg3qr6pyR/QO++juuq6n/Xe7DVWOsj+Epuc+WtbnNdI13mI8ktwF3A3qp6ZUKz\nvW7YjFcA1wEPJXmW3s9nsxO+0Nblc1wAZqvqtar6CfAjesFvlPkOAscBqup7wDvo3ae+UXT6t/om\na3zhYDNwDtjJry5u/O6iNZ/kjRfZjk/wwkaX+a6nd4Fm1yQvuqxkxkXrH2LyF9m6fI67ga/0H2+l\nd7r57g003wPA7f3HH6D3M3gm/DlezfIX2f6UN15k+36n15zA0Hvofbf+MXBXf98RekdD6H2n/CYw\nD3wfeP+EP9Rh830H+B/gif6f2UnO12XGRWsnHnjHzzH0fpQ4C/wQ2L/B5psGHunH/wTwJxOe7z7g\nZ8Br9M52DgIfBz4+8Pkd7c//w65/x97JJjXMO9mkhhm41DADlxpm4FLDDFxqmIFLDTNwqWEGLjXs\n/wBsot+hYDzAgAAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x10bd196d8>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "fig = pyplot.figure(figsize=(8,5))\n",
     "pyplot.subplot(121)\n",
